--- a/code/composer.json
+++ b/code/composer.json
@@ -18,6 +18,7 @@
         "phattarachai/thaidate": "^12.1",
         "phpoffice/phpword": "^0.18.3",
         "renanbr/bibtex-parser": "^2.1",
+        "serpapi/google-search-results-php": "^1.2",
         "spatie/laravel-permission": "^5.4",
         "symfony/process": "^5.4",
         "yajra/laravel-datatables-oracle": "^9.19"
